подогнала картинки, но нужен ремонт

--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -1,10 +1,11 @@
 .gallery {
   height: 122px;
   position: relative;
+  
   background-image: linear-gradient(
     to bottom,
-   $section-background-color 40%,
-    $body-background-color 40%,);
+   $section-background-color 54%,
+    $body-background-color 54%,);
   
 }
 
@@ -20,6 +21,7 @@
 }
 
 // .gallery-img {
+//  padding-bottom: 40px;
 //   height: 100%;
 // }
 
@@ -35,6 +37,13 @@
   .gallery-container,
   .gallery {
     height: 264px;
+  }
+
+  .gallery {
+    background-image: linear-gradient(
+      to bottom,
+    $section-background-color 36%,
+      $body-background-color 36%,);
   }
 
   // .gallery-container {
@@ -54,6 +63,13 @@
   .gallery-container,
   .gallery {
     height: 430px;
+  }
+
+  .gallery {
+    background-image: linear-gradient(
+      to bottom,
+    $section-background-color 33%,
+      $body-background-color 33%,);
   }
 
   // .gallery-container {
