--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -37,7 +37,7 @@
 
         </li>
         <li class="contacts-cards__item">
-        <p class="contacts-cards__foodtruck">FOODTRUCK</p>
+        <p class="contacts-cards__foodtruck">FOOD TRUCK</p>
         <h3 class="contactacts-cards__title">Los Angeles</h3>
         <p class="contacts-cards__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
         <ul class="contacts-cards__shedule-list">
@@ -97,20 +97,25 @@
             </ul>
         </li>
     </ul>
-   <!--<ul class="buttons__list">
+   <ul class="buttons__list">
         <li class="buttons__item">
-            <div>
+            <div class="location-button_wrapper">
         <button type="button" class="contacts-btn location-btn">Our Locations</button>
-        <span class="location-btn__-icon"></span>
+        <svg class="menu__line-icon">
+            <use href='/images/sprite.svg#icon-line'></use>
+        </svg>
         </div>
         </li>
         <li class="buttons__item">
-        <div>
+        <div class="franchise-button_wrapper">
         <button type="button" class="contacts-btn franchise-button">Franchise</button>
-        <span class="footer__sign-icon"></span>
+        <svg class="menu__franchise-icon">
+            <use href='/images/sprite.svg#icon-line'></use>
+        </svg>
+        </button>
         </div>
         </li>
-    </ul>-->
+    </ul>
     
     </div>
 </section>
