--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -18,8 +18,8 @@
 }
 
 .contacts-cards__item {
-  width: 100%;
-  max-height: auto;
+  max-width: 100%;
+  max-height: 100vh;
   
   padding-top: 43px;
   padding-bottom: 43px;
@@ -34,29 +34,35 @@
       margin-bottom: 20px;
     }
     @media screen and (min-width: $tablet) {
-      /*padding-top: 50px;
+      
+      padding-top: 50px;
       padding-bottom: 50px;
       padding-left: 31px;
-  padding-right: 32px;*/
+  padding-right: 32px;
       margin: 10px;
       width: calc((100% - 3*20px)/3);
       
     }
-   
-  }
-  @media screen and (min-width: $desktop) {  
+     @media screen and (min-width: $desktop) {  
+       
       padding-top: 50px;
       padding-bottom: 50px;
       padding-left: 44px;
       padding-right: 43px;
- }  
+    }  
+  }
+ 
+ 
 }
 
  
     
 
+
 .contacts-cards__main-title {
-  padding-left: 20px;
+  text-align: center;
+  
+  
   margin-bottom: 25px;
   font-weight: 500;
   font-size: 12px;
@@ -65,18 +71,20 @@
   letter-spacing: 0.04em;
 
   color: #fff;
-}
-.contacts-cards__main-title {
   background-color: #f0d1a5;
   border-radius: 4px;
   max-width: 80px;
   @media screen and (min-width: $tablet) {
     max-width: 73px;
+    font-size: 16px;
+  line-height: 1.88;
   }
 
 }
 
 .contacts-cards__foodtruck {
+  
+  text-align:  center;
   font-weight: 500;
   font-size: 12px;
   margin-bottom: 25px;
@@ -87,50 +95,55 @@
   color: #fff;
   background-color: $milkshake-color;
   border-radius: 4px;
-  max-width: 130px;
-  @media screen and (min-width: 768px) {
-    max-width: 138px;
+ /* max-width: 130px;*/
+  @media screen and (min-width: $tablet) {
+   /* max-width: 138px;*/
     margin-bottom: 30px;
+    font-size: 16px;
+  line-height: 1.88;
   }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $desktop) {
     
     margin-bottom: 32px;
   }
 }
 
 .contactacts-cards__title {
+  
   font-weight: 500;
   font-size: 12px;
   line-height: 1.83;
   margin-bottom: 10px;
   letter-spacing: 0.04em;
   @media screen and (min-width: 768px) {
+    
     font-size: 14px;
   line-height: 1.86;
   }
   @media screen and (min-width: 768px) {
+   
     font-size: 16px;
   line-height: 1.88;
   }
 }
 
 .contacts-cards__text {
- max-width: 179px;
+ /*max-width: 179px;*/
  
- margin-right: auto;
- margin-left: auto;
+ 
+ 
   font-weight: 500;
   font-size: 12px;
   line-height: 1.5;
   margin-bottom: 50px;
   color: #907e82;
   @media screen and (min-width: 768px) {
-    /*max-width: 145px;*/
+   /* max-width: 145px;*/
     font-size: 14px;
   line-height: 1.64;
   }
   @media screen and (min-width: $desktop) {
-  /* max-width: 243px;*/
+   /*max-width: 243px;*/
     font-size: 16px;
   line-height: 1.81;
   letter-spacing: 0.04em;
@@ -141,12 +154,17 @@
 
 
 .contacts-cards__shedule-list {
+  /*max-width: 162px;*/
+  
+  
   margin-bottom: 50px;
    @media screen and (min-width: 768px) {
      margin-bottom: 60px;
+     /*max-width: 141px;*/
    }
    @media screen and (min-width: $desktop) {
     margin-bottom: 64px;
+   /* max-width: 163px;*/
   }
 }
 
@@ -155,6 +173,7 @@
 }
 
 .contactacts-cards__shedule-title {
+  
   font-weight: 500;
   font-size: 12px;
   line-height: 1.22;
@@ -171,14 +190,34 @@
   }
 }
 .contactacts-cards__shedule-text {
+  
   font-weight: 500;
   font-size: 12px;
   line-height: 1.83;
 
   color: #ffa5ba;
+   @media screen and (min-width: 768px) {
+    font-size: 14px;
+  line-height: 1.86;
+     
+   }
+   @media screen and (min-width: $desktop) {
+   font-size: 16px;
+  line-height: 1.88;
+  }
 }
 
-
+.contacts-cards__contacts-list {
+  
+  
+  /*max-width: 179px;*/
+  @media screen and (min-width: 768px) {
+    max-width: 157px;
+    @media screen and (min-width: $desktop) {
+  /*max-width: 243px;*/
+  }
+}
+}
 .contacts-cards__contacts-link {
   
   font-weight: 500;
@@ -190,7 +229,7 @@
 
 
 
-/*.buttons__list {
+.buttons__list {
   @media screen and (max-width: 767px) {
   display: flex;
   flex-direction: column;
@@ -249,4 +288,15 @@ text-align: center;
 .franchise-button {
   color: #D41443;
   background-color: #fff;
-}*/
+}
+
+.location-button_wrapper {
+  position: relative;
+}
+
+.menu__line-icon {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateY(-50%);
+}
