додає адаптивну верстку

--- a/src/partials/hero_header.html
+++ b/src/partials/hero_header.html
@@ -16,15 +16,17 @@
                     <span class="logo-icecream">icecream</span>
                 </a>
 
-                <nav class="navigation-case">
-                    <ul class="navigation-list list">
-                        <li class="navigation-list-item"><a class="nav link" href="">Home</a></li>
-                        <li class="navigation-list-item"><a class="nav link" href="">About us</a></li>
-                        <li class="navigation-list-item"><a class="nav link" href="">How it’s made?</a></li>
-                        <li class="navigation-list-item"><a class="nav link" href="">Our products</a></li>
-                        <li class="navigation-list-item"><a class="nav link" href="">Contact</a></li>
-                    </ul>
-                </nav>
+                <div class="nav-block">    
+                    <nav class="navigation-case">
+                        <ul class="navigation-list list">
+                            <li class="navigation-list-item"><a class="nav accent link" href="">Home</a></li>
+                            <li class="navigation-list-item"><a class="nav link" href="">About us</a></li>
+                            <li class="navigation-list-item"><a class="nav link" href="">How it’s made?</a></li>
+                            <li class="navigation-list-item"><a class="nav link" href="">Our products</a></li>
+                            <li class="navigation-list-item"><a class="nav link" href="">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
 
 
                 <div class="btn-case">
@@ -55,7 +57,7 @@
 
 
 <!-- hero -->
-        <section class="hero-block"> 
+<!-- <section class="hero-block">  -->
 
             <div class="slogan-case">
 
@@ -101,39 +103,54 @@
 
                 </div>
 
-            </div>
+            </div>  
+
 
 
         <div class="hero-center">
-
-
-
-            <div class="hero-case">       
-                    <picture class="hero-image"></picture>  
-                    
-                        <source srcset="./images/hero-header/desktop-ice-cream.webp 1x, ./images/hero-header/desktop-ice-cream@2x.webp 2x"
-                            media="(min-width: 1280px)" type="image/webp">
-                        <source srcset="./images/hero-header/tablet-ice-cream.webp 1x, ./images/hero-header/tablet-ice-cream@2x.webp 2x"
-                            media="(min-width: 768px)" type="image/webp">
-                        <source srcset="./images/hero-header/mobile-ice-cream.webp 1x, ./images/hero-header/mobile-ice-cream@2x.webp 2x"
-                            media="(min-width: 320px)" type="image/webp">
-
-                        <source srcset="./images/hero-header/desktop-ice-cream.png 1x, ./images/hero-header/desktop-ice-cream@2x.png 2x"
-                            media="(min-width: 1280px)">
-                        <source srcset="./images/hero-header/tablet-ice-cream.png 1x, ./images/hero-header/tablet-ice-cream@2x.png 2x"
-                            media="(min-width: 768px)">
-                        <source srcset="./images/hero-header/mobile-ice-cream.png 1x, ./images/hero-header/mobile-ice-cream@2x.png 2x"
-                            media="(min-width: 320px)">
-                    
-                        <img src="./images/hero-header/mobile-ice-cream.png" alt="рожковое мороженое">
-                    
-
-                    </picture> 
-            </div>
-
+            <div class="hero-content"></div>
             
-
+            <div class="hero-case">
+                <picture>
+                    <source srcset="
+                      ./images/hero-header/desktop-ice-cream.webp    1x,
+                      ./images/hero-header/desktop-ice-cream@2x.webp 2x
+                    " media="(min-width: 1280px)" type="image/webp" />
+                    <source srcset="
+                      ./images/hero-header/desktop-ice-cream.png    1x,
+                      ./images/hero-header/desktop-ice-cream@2x.png 2x
+                    " media="(min-width: 1280px)" />
+                    <source srcset="
+                      ./images/hero-header/tablet-ice-cream.webp    1x,
+                      ./images/hero-header/tablet-ice-cream@2x.webp 2x
+                    " media="(min-width: 768px)" type="image/webp" />
+                    <source srcset="
+                      ./images/hero-header/tablet-ice-cream.png    1x,
+                      ./images/hero-header/tablet-ice-cream@2x.png 2x
+                    " media="(min-width: 768px)" />
+                    <source srcset="
+                      ./images/hero-header/mobile-ice-cream.webp    1x,
+                      ./images/hero-header/mobile-ice-cream@2x.webp 2x
+                    " media="(min-width: 280px)" type="image/webp" />
+                    <source srcset="
+                      ./images/hero-header/mobile-ice-cream.png    1x,
+                      ./images/hero-header/mobile-ice-cream@2x.png 2x
+                    " media="(min-width: 280px)" />
+                    <img src="./images/hero-header/mobile-ice-cream.png"  alt="рожковое мороженое" />                    
+                </picture>
+                
+            </div>
+            
         </div>
+
+
+
+
+
+
+
+
+
 
             
             <div class="soooooo-tasty">
@@ -171,10 +188,10 @@
             </div>   
 
 
-        </section>
+        <!-- </section> -->
 
 
-    </div>
+    
 </header>
 
 
