--- a/src/sass/layout/_hero_header.scss
+++ b/src/sass/layout/_hero_header.scss
@@ -1,7 +1,26 @@
   .header {
     background-color: var(--bg-hero);
+
+    
+    // position: relative;
+    // display: flex;
+    // align-items: center;
+    // justify-content: space-between;
+    // height: 41  0px;
+    height: 500px;
+    
+    @media screen and (min-width: 768px) {
+      height: 400px;
+    }
+    @media screen and (min-width: 1280px) {
+      height: 665px;
+    }
+  
     
   }
+
+
+
   .Logo-icon {
     transition: var(--transition-duration) var(--timing-function);
     fill: var(--main-dark-color);
@@ -23,33 +42,79 @@
 
     }
     @media screen and (min-width: 1280px) {
-      padding: 45px 50px; 
-      display: flex;
-      align-items: center;
+      // padding: 45px 50px; 
+      // display: flex;
+      // align-items: center;
+       padding-bottom: 85px;
     }
   }
 
-  .hero-center{
-    // position: relative;
-    // overflow: hidden;
-    // height: 445px;
+
+  
 
 
-    //  @media screen and (min-width: 768px) {
-    //    position:static;
-    //   //  height: 355px; //покищо повисить тут/////////////////////
-    // }
-    // @media screen and (min-width: 1280px) {
-    // }
 
+
+
+.hero-center{
+  position: absolute;
+  display: flex;
+    // justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
+  // width: 280px;
+
+  //  margin-bottom: 38px;
+  @media screen and (min-width: 768px) {
+    // width: 480px;
   }
-  .hero-block{
-    // position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 460px;
+  @media screen and (min-width: 1280px) {
   }
+  
+}
+
+.hero-case {
+
+  position: relative;
+  margin-left: 117px;
+  margin-top: 28px;
+
+  // position: relative;
+  // transform: translate(-50%, 0);
+  // min-width: 410px;
+  // padding-left: 60px;
+
+
+  // @media screen and(max-width:767px) {
+  // max-width: 410px;
+  // }
+  @media screen and(min-width:768px) {
+    
+   margin-left: 380px;
+   margin-top: -36px;
+  }
+   @media screen and(min-width:1280px) {
+    margin-left: 595px;
+    margin-top: -60px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
+
+  
 
 
 
@@ -69,8 +134,11 @@
   }
 
   .soooooo-tasty{
+    position: absolute;
+    background-color: aquamarine;
     @media screen and (min-width: 768px) {
-     display: block; 
+    //  display: block; 
+     
     }
     @media screen and (min-width: 1280px) {
     }
@@ -78,7 +146,8 @@
 
   .navigation-case{
     @media screen and (min-width: 1280px) {
-    display: block;
+    display: flex;
+    align-items: center;
   }
   }
 
@@ -94,15 +163,26 @@
 
   .navigation-list{
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    align-items: center;    
   }
 
+
   .navigation-list-item{
-   &:hover .nav:hover,
+     &:hover .nav:hover,
      &:focus .nav:focus{
       color: #D41443;
     }
+
+    &:not(:last-child) {
+    margin-right: 50px;
+    }
+  }
+
+
+
+  .nav-block{
+    display: flex;
+    margin: 0 auto;
   }
 
  
@@ -113,16 +193,19 @@
     // z-index: 3;
     // left: 20px;
     // top: 345px;
-    margin-top: 160px;
-    padding-left: 50px;
+    // margin-top: 160px;
+    // padding-left: 50px;
+    margin-top: 16px;
+    margin-left: 50px;
 
      @media screen and (min-width: 768px) {
       display: flex;
       align-items: center; 
-      padding-bottom: 25px;
+      // padding-bottom: 25px;
       margin-top: 20px;
     }
     @media screen and (min-width: 1280px) {
+      margin-top: 55px;
     }
  }
 
@@ -194,10 +277,10 @@
     padding-left: 20px;
     
   
-  //  @media screen and (min-width: 768px) {
-  //   padding-left: 50px;
-  //   margin-top: 0;
-  // }
+   @media screen and (min-width: 768px) {
+    padding-left: 50px;
+    margin-top: 0;
+  }
   // @media screen and (min-width: 1280px) {
   // }
   }
@@ -208,21 +291,43 @@
   font-style: normal;
   font-weight: normal;
   font-size: 26px;
-  line-height: 1.153;
+  line-height: 1.154;
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: var(--text-color-dark-bg);
+
+   
+  @media screen and (min-width: 768px) {       
+    font-size: 22px;
+    line-height: 1.136;
   }
+  @media screen and (min-width: 1280px) {
+    font-size: 38px;
+    line-height: 1.157;
+  }
+  }
+
+
+
 
   .slogan-prefix{
     font-family: Titan One;
     font-style: normal;
     font-weight: normal;
-    font-size: 48px;
-    line-height: 1.145;
+    font-size: 46px;
+    line-height: 1.043;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--main-dark-color);
+
+    @media screen and (min-width: 768px) {       
+    font-size: 30px;
+    line-height: 1.133;
+    }
+    @media screen and (min-width: 1280px) {
+      font-size: 52px;
+      line-height: 1.115;
+    }
 
   }
 
@@ -231,10 +336,10 @@
   .header-but-list{
     padding-top: 19px;
     display: flex;
-    padding-bottom: 95px;
+    // padding-bottom: 95px;
 
      @media screen and (min-width: 768px) {
-      padding-bottom: 20px;
+      // padding-bottom: 20px;
     }
     @media screen and (min-width: 1280px) {
     }
@@ -375,14 +480,7 @@
   
 
 
-  .header {
-  @media screen and (min-width: 768px) {
-    // display: flex;
-  }
-  @media screen and (min-width: 1280px) {
-    // display: flex;
-  }
-}
+ 
 
 
 
@@ -503,6 +601,7 @@
     background-color: var(--text-color-dark-bg);
     display: flex;
     align-items: center;
+    transform: translate(-50%, 0);
 
     color: var(--main-dark-color);
     background: var(--text-color-dark-bg);
@@ -563,34 +662,40 @@
   }
   .slogan-case{
     z-index: 2;
-    position: relative;
-  }
-
-
-  .hero-case{
-    display: flex;
-    align-items: center;
-    width: 374px;
-    height: 351px;
-    border-radius: 50%;
-    background: var(--label-color);
-    transform: translate(-50%, 0);
-
-    margin-top: 45px;
-
-    @media screen and (min-width: 768px) {
-     
-      margin-top: 50px;
-      
-      }
-    @media screen and (min-width: 1280px) {
-      // padding-left: 594px;
+    position: absolute;  
     }
-  }
+
+
+  // .hero-content{
+  //   width: 345px;
+  //   height: 345px;
+  //   border-radius: 50%;
+  //   background: var(--label-color);
+  //   transform: translate(-50%, 0);
+
+  //   // margin-top: 40px;
+  //   // margin-left: 50px;
+
+  //   @media screen and (min-width: 768px) {
+     
+  //     // margin-top: 40px;
+  //     // margin-left: 220px;
+      
+  //     }
+  //   @media screen and (min-width: 1280px) {
+  //     // padding-left: 594px;
+  //   }
+  // }
+
+
+
+  
+
 
 
 
   .hero-image{
-    padding: 20px;
+    // padding: 20px;
+    // max-width: 50px;
   }
   
