finish products section

--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -5,6 +5,7 @@
     text-align: center;
     text-transform: uppercase;
     color: $secondary-text-accent;
+    margin-bottom: 15px;
 }
 
 .products-title {
@@ -55,16 +56,49 @@
     color: $color-main;
 }
 
-.products-item-box::before {
+.products-item-1::before {
    content: "";
-   background-image: url('products-img-1.png');
+   background-image: url('../images/products/products-img-1.png');
    position: absolute;
-   left: 0;
    top: 0;
-   width: 335px;
-   height: 335px;
 }
 
+.products-item-2::before {
+    content: "";
+    background-image: url('../images/products/products-img-2.png');
+    position: absolute;
+    top: 0;
+ }
+
+ .products-item-3::before {
+    content: "";
+    background-image: url('../images/products/products-img-3.png');
+    position: absolute;
+    top: 0;
+ }
+
+.products-item-name::after {
+    content: "...";
+    text-overflow: ellipsis;
+    color: #ffffff;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    position: absolute;
+    border: none;
+}
+
+.products-item-button {
+    background: transparent;
+    border: none;
+    width: 40px;
+    height: 40px;
+}
+
+.products-item-button-image {
+    width: 40px;
+    height: 40px;
+}
 
 @media screen and (min-width: 320px) {
     .products-caption {
@@ -80,6 +114,7 @@
     .products-title {
         font-size: 34px;
         line-height: 1.15;
+        margin-bottom: 144px;
     }
 
     .products-list {
@@ -90,17 +125,46 @@
     .products-items {
         max-width: 440px;
         height: 485px;
-        margin-bottom: 17px;
+        margin-bottom: 130px;
     } 
 
     .products-item-name {
         font-size: 20px;
         line-height: 1.15;
+        position: relative;
     }
 
     .products-item-text {
         font-size: 14px;
         line-height: 1.5;
+        margin-top: 66px;
+        margin-bottom: 30px;
+    }
+
+    .products-item-1,
+    .products-item-2,
+    .products-item-3 {
+        padding: 161px 40px 41px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        // height: 100%;
+    }
+
+    .products-item-1::before,
+    .products-item-2::before,
+    .products-item-3::before {
+        width: 249px;
+        height: 252px;
+        background-size: cover;
+        background-repeat: no-repeat;
+        transform: translateY(-46%);
+    }
+
+    .products-item-name::after {
+        left: 50px;
+        top: 39px;
     }
 }
 
@@ -120,6 +184,7 @@
     .products-title {
         font-size: 48px;
         line-height: 1.15;
+        margin-bottom: 150px;
     }
 
     .products-items {
@@ -139,11 +204,38 @@
     .products-item-text {
         font-size: 14px;
         line-height: 1.79;
+        margin-top: 66px;
+        margin-bottom: 40px;
+    }
+
+    .products-item-1,
+    .products-item-2,
+    .products-item-3 {
+        padding: 152px 11px 40px;
+    }
+
+    .products-item-1::before,
+    .products-item-2::before,
+    .products-item-3::before {
+        width: 220px;
+        height: 226px;
+        background-size: cover;
+        transform: translateY(-46%);
+        left: 0;
+    }
+
+    .products-item-name {
+        position: static;
+    }
+
+    .products-item-name::after {
+        left: 95px;
+        top: 190px;
     }
 }
 
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
     .products-caption {
         font-size: 30px;
         line-height: 34px;
@@ -157,6 +249,7 @@
     .products-title {
         font-size: 58px;
         line-height: 1.14;
+        margin-bottom: 259px;
     }
 
     .products-items {
@@ -181,11 +274,36 @@
     .products-item-text {
         font-size: 16px;
         line-height: 1.75;
-        margin-top: 32px;
+        margin-top: 70px;
         margin-bottom: 62px;
     }
 
-    .products-item-box {
-        padding: 38px 44px 50px;
+    .products-item-1,
+    .products-item-2,
+    .products-item-3 {
+        padding: 163px 44px 50px;
+    }
+    
+    .products-item-1::before {
+        width: 335px;
+        height: 335px;
+        transform: translateY(-64%);
+     }
+     
+     .products-item-2::before {
+         width: 335px;
+         height: 335px;
+         transform: translateY(-64%);
+      }
+     
+      .products-item-3::before {
+         width: 335px;
+         height: 335px;
+         transform: translateY(-64%);
+      }
+
+      .products-item-name::after {
+        left: 151px;
+        top: 205px;
     }
 }
