--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -109,7 +109,7 @@
         <li class="buttons__item">
         <div class="franchise-button_wrapper">
         <button type="button" class="contacts-btn franchise-button">Franchise</button>
-        <svg class="menu__franchise-icon">
+        <svg class="menu__line-icon">
             <use href='/images/sprite.svg#icon-line'></use>
         </svg>
         </button>
