--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -239,6 +239,7 @@
   }
 
   .contacts {
+    position: relative;
     background-image: linear-gradient(to bottom, rgba( 255, 255, 255, 0.4),
      rgba(255, 245, 246, 0.4)),url(../images/sectionbg.png);
     background-color: transparent;
@@ -321,5 +322,17 @@
 
   .button-franchise {
     width: 180px;
+  }
+
+  .button-location-menu {
+    position: absolute;
+    width: 100%;
+    max-width: 480px;
+    height: 100% vh;
+    top: 0;
+    left: 50%;
+    transform: translateX( -50%);
+    border-color: bisque;
+    padding: 48px 40px;
   }
 }
