добавлен неработающий градиент

--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -40,11 +40,8 @@ li {
   z-index: 2;
   font-size: 12px;
   line-height: 2.55;
-
 display: inline;
-  background-repeat: no-repeat;
-	background-size: 100% 1px;
-  background-image: repeating-linear-gradient(to right, $review-gradient,  $review-gradient);
+  background-image: repeating-linear-gradient (to top, $review-gradient 0px 1px, transperent 1px 31px);
 
 @media screen and(min-width:768px){
   font-size: 14px;
