--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -2,6 +2,10 @@
   background-color: var(--primary-bcg-color);
   padding-top: 146px;
   position: relative;
+  background-image: url(../images/about/m-milk.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: bottom;
   @media screen and (min-width: 772px) {
     padding-top: 130px;
   }
@@ -10,15 +14,31 @@
   }
 }
 
-.about-picture-milk {
-  position: absolute;
-  bottom: 61px;
-  width: 100%;
-  @media screen and (min-width: 480px) and (max-width: 1279px) {
-    display: none;
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .about-section {
+    background-image: url(../images/about/m-milk@2x.png);
   }
-  @media screen and (min-width: 1280px) {
-    top: 342px;
+}
+
+@media screen and (min-width: 481px) {
+  .about-section {
+    background-image: none;
+  }
+}
+
+@media screen and (min-width: 773px) {
+  .about-section {
+    background-image: url(../images/about/d-milk.png);
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 773px),
+  screen and (min-resolution: 192dpi) and (min-width: 773px),
+  screen and (min-resolution: 2dppx) and (min-width: 773px) {
+  .about-section {
+    background-image: url(../images/about/d-milk@2x.png);
   }
 }
 
@@ -44,9 +64,8 @@
 
 .about-title {
   font-family: Titan One;
-
   font-weight: normal;
-  font-size: 34px;
+  font-size: 36px;
   line-height: 39px;
   text-align: center;
   text-transform: uppercase;
@@ -74,14 +93,13 @@
 
 .about-picture-cow {
   margin-bottom: 46px;
-
   margin-left: auto;
   margin-right: auto;
   @media screen and (min-width: 772px) {
     margin-bottom: 0;
     min-width: 340px;
   }
-  @media screen and (min-width: 772px) {
+  @media screen and (min-width: 1280px) {
     margin-bottom: 0;
     min-width: 516px;
   }
