--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,30 +8,30 @@
         </div>
 
         <div class="footer__contact">
-            <ul class="footer__social list">
-                <li class="footer__social-list">
+            <ul class="footer__social-list list">
+                <li class="footer__social-item">
                     <a class="footer__social-link link" href="https://github.com/" target="_blank" rel="noreferrer noopener">
-                        <div class="footer__social-item">
+                        <div class="footer__social-sprite">
                             <svg class="footer__social-icon">
                                 <use href="./images/sprite.svg#github"></use>
                             </svg>
                         </div>
                     </a>
                 </li>
-                <li class="footer__social-list">
+                <li class="footer__social-item">
                     <a class="footer__social-link link" href="https://telegram.org/" target="_blank"
                         rel="noreferrer noopener">
-                        <div class="footer__social-item">
+                        <div class="footer__social-sprite">
                             <svg class="footer__social-icon">
                                 <use href="./images/sprite.svg#telegram"></use>
                             </svg>
                         </div>
                     </a>
                 </li>
-                <li class="footer__social-list">
+                <li class="footer__social-item">
                     <a class="footer__social-link link" href="https://www.facebook.com/" target="_blank"
                         rel="noreferrer noopener">
-                        <div class="footer__social-item">
+                        <div class="footer__social-sprite">
                             <svg class="footer__social-icon">
                                 <use href="./images/sprite.svg#fb"></use>
                             </svg>
