--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -3,7 +3,7 @@
   background-color: var(--secondary-bg-color);
   
   &-separator {
-    width: 100%;//360px;
+    width: 100%;
     height: 2px;
     background-color: var(--primary-line-color);
     margin: 0 auto;
@@ -16,19 +16,18 @@
 
     position: relative;
   }
-  &-right {
-    display: block;
-    //padding-left: 40px;
-    padding-right: 0px;
 
+  &-right {
     position: absolute;
     right: 0px;
+    display: block;
+    padding-right: 0px;
   }
 
   &-left {
-    text-align: left;
     display: block;
     width: 234px;
+    text-align: left;
   }
 
   &-text1 {
@@ -36,7 +35,7 @@
     font-style: 400;
     font-weight: normal;
     font-size: 18px;
-    line-height: 21px;
+    line-height: 1.167;
     text-transform: uppercase;
     color: var(--light-accent-color);
     margin-bottom: 30px;
@@ -46,7 +45,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 34px;
-    line-height: 39px;
+    line-height: 1.147;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: var(--accent-color);
@@ -78,8 +77,7 @@
     color: var(--secondary-dark-shaded-color);
     padding-top: 30px;
     padding-bottom: 30px;
-    //padding-left: 85px;
-    //padding-right: 85px;
+    
     &-container {
       text-align: center;
     }
@@ -165,54 +163,22 @@
     width: 100%;
 
     & .container {
-      width: calc(100% - 40px);//320px;
+      width: calc(100% - 40px);
       padding: 0 20px;
     }
-    /*&-separator {
-      width: 360px;
-    }*/
-  }
-}
-
-@include adaptive-for-phone {
-  .footer {
-
-    /*&-separator {
-      width: 520px;
-    }*/
-    /*&-right {
-      padding-left: 200px;
-    }*/
-    /*&-left {
-      width: 234px;
-    }*/
-    /*&-copyright {
-      padding-left: 165px;
-      padding-right: 165px;
-    }*/
   }
 }
 
 @include adaptive-for-tablet {
   .footer {
-
-    /*&-separator {
-      width: 768px;
-    }*/
-    /*&-right {
-      padding-left: 80px;
-    }
-    &-left {
-      width: 340px;
-    }*/
     &-text1 {
       font-size: 26px;
-      line-height: 30px;
+      line-height: 1.154;
       letter-spacing: 0.04em;
     }
     &-text2 {
       font-size: 48px;
-      line-height: 55px;
+      line-height: 1.146;
       letter-spacing: 0.06em;
     }
   }
@@ -220,16 +186,6 @@
 
 @include adaptive-for-desktop {
   .footer {
-
-    /*&-separator {
-      width: 1200px;
-    }*/
-    /*&-right {
-      padding-left: 290px;
-    }
-    &-left {
-      width: 480px; //474px;
-    }*/
     &-text1 {
       font-size: 30px;
       line-height: 34px;
@@ -237,7 +193,7 @@
     }
     &-text2 {
       font-size: 58px;
-      line-height: 66px;
+      line-height: 1.133;
       letter-spacing: 0.06em;
     }
   }
