--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -4,7 +4,7 @@
     <ul class="advantages__list">
       <li class="advantages__items advantages__items--icon1">
         <p class="advantages__text animate__wobble">721</p>
-        <p class="advantages__description">
+        <p class="advantages__description animate__swing">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
