убрал абсолют с 3-х точек. поменял текст в цитатах

--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -13,9 +13,9 @@
             <div class="slider-quote">
               <div class="slider-text">
                 <p class="text-quote">
-                  Nullam viverra consectetuer. Quisque cursus et, porttitor
-                  risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
-                  congue. Lorem ipsum primis in nibh vel risus.
+                  It's OK... Windows is for housewives, Mac -
+                  for people, and Linux - for admins. And one more thing: if background-color, then
+                  it's tomato. We study all this for 8 weeks, so that you become a human!
 <!--                   Все нормально, все окей... Windows - для домохозяек, Mac - 
                   для людей, а Линуха - для админов. И еще: если background-color, то 
                   это tomato. Мы все это учим 8 недель, чтоб ты человеком стал!
@@ -40,9 +40,9 @@
             <div class="slider-quote">
               <div class="slider-text">
                 <p class="text-quote">
-                  Nullam viverra consectetuer. Quisque cursus et, porttitor
-                  risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
-                  congue. Lorem ipsum primis in nibh vel risus.
+                  Guys, check this layout, and literally disassemble it into
+                  molecules ... Section "Customer Reviews", you can put photos of your classmates 
+                  instead of these beautiful bitches. But, please, no teachers. 
 <!--                   Ребята, смотрим макет, и буквально разбираем его на 
                   молекулы... Секция "Отзывы клиентов", можете туда вместо этих 
                   красивых тёть вставить фото одногруппников. Преподов не надо.
@@ -67,9 +67,9 @@
             <div class="slider-quote">
               <div class="slider-text">
                 <p class="text-quote">
-                  Nullam viverra consectetuer. Quisque cursus et, porttitor
-                  risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
-                  congue. Lorem ipsum primis in nibh vel risus.
+                  GoIT-company takes pride in what our graduates do. We are 
+                  used to collect inspirational stories of those who started their 
+                  IT careers from GoIT courses. Good luck to you, newbie!
                   <!-- В GoIT гордятся тем, что делают наши выпускники. Мы постоянно
                   собираем вдохновляющие истории тех, кто начал свою IT-карьеру 
                   с обучения в GoIT. -->
@@ -83,12 +83,6 @@
           </div>
         </div>
       </div>
-    </div>
-
-    <div class="slider-point">
-      <span></span>
-      <span></span>
-      <span></span>
     </div>
 
     <div class="swiper-pagination"></div>
