--- a/src/sass/layout/_testimonials.scss
+++ b/src/sass/layout/_testimonials.scss
@@ -55,33 +55,6 @@ letter-spacing: 0.04em
   background: rgba(0, 0, 0, 0.2);
 }
 
-.slider-point {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  grid-gap: 10px;
-  position: absolute;
-  bottom: 184px;
-  left: 50%;
-  z-index: 100;
-  transform: translateX(-50%);
-
-  @media (min-width: $tablet) {
-    bottom: 182px;
-  }
-  @media (min-width: $desktop) {
-    bottom: 180px;
-  }
-}
-
-.slider-point span {
-  display: inline-flex;
-  width: 4px;
-  height: 4px;
-  background: #c7133e;
-  border-radius: 50%;
-}
-
 .swiper-pagination-bullet-active {
   background-color: #fff;
   border-radius: 0;
@@ -104,11 +77,36 @@ letter-spacing: 0.04em
   }
 }
 
+.slider-adress {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.slider-adress::before {
+  content: '';
+  display: block;
+  width: 32px;
+  height: 4px;
+  margin-bottom: 18px;
+  background-image: url('../images/7-testimonials/points.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+  @media (min-width: $tablet) {
+    margin-bottom: 14px;
+  }
+  @media (min-width: $desktop) {
+    margin-bottom: 15px;
+  }
+}
+
 .slider-adress-text {
-font-style: normal;
-font-weight: 500;
-font-size: 20px;
-line-height: 186%;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 186%;
 }
 
 .slider-quote {
@@ -134,26 +132,26 @@ line-height: 186%;
 
   }
 .slider-bg {
-width: 280px;
+    width: 280px;
     background: -webkit-gradient(linear,left bottom,left top,from(#fafafa),color-stop(60%,#fafafa),color-stop(100%,transparent),to(transparent));
     background: linear-gradient( 
 0deg
  ,#fafafa,#fafafa 100%,transparent 0,transparent);
         padding: 32px;
-        margin-bottom: 40px;
+        margin-bottom: 30px;
 
         @media (min-width: $tablet) {
           height: 164px;
-          margin-bottom: 70px;
+          margin-bottom: 24px;
         }
         @media (min-width: $desktop) {
           height: 138px;
-          margin-bottom: 34px;
+          margin-bottom: 15px;
         }
 }
 p.text-quote {
   -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
+  transform-style: preserve-3d;
 }
   p.text-quote:before {
     content: '';
@@ -178,32 +176,31 @@ p.text-quote {
     .slider-bg {
     width: 620px;
     height: 164px;
-}
-.slider-quote {
+  }
+
+  .slider-quote {
     width: 524px;
     height: 106px;
     display: flex;
     align-items: flex-end;
+  }
 }
 
-}
-
-
-  @media screen and (min-width: 1280px) {
+@media screen and (min-width: 1280px) {
   .swiper {
-  padding-top: 61px;
-  padding-bottom: 66px;
-    }
+    padding-top: 61px;
+    padding-bottom: 66px;
+  }
     
     .slider-bg {
     width: 929px;
     height: 138px;
 }
-.slider-quote {
+  .slider-quote {
     width: 822px;
     height: 74px;
-}
   }
+}
 
   .text-quote {
     width: 100%;
