--- a/src/sass/layout/_customer_reviews.scss
+++ b/src/sass/layout/_customer_reviews.scss
@@ -16,13 +16,18 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
+  
 }
+
+
 .customer-reviews {
   margin-top: 80px;
   margin-bottom: 86px;
 }
 
 .customer-reviews__text-review {
+  
   font-size: 12px;
   background-color: var(--bg-feedback);
   line-height: 2.58;
@@ -36,22 +41,32 @@
 }
 
 .customer-reviews__text-review-lines{
+   
 	display: inline;
 	background-repeat: no-repeat;
 	background-position: center bottom 1px;
 	background-size: 100% 1px;
-	background-image: linear-gradient(to top, #e1e1e1, #e1e1e1);}
+	background-image: linear-gradient(to top, #e1e1e1, #e1e1e1);
+}
 
 .customer-reviews__text-about {
   font-size: 14px;
   line-height: 2.58;
 }
 
-.customer-reviews__text-review:after {
-  display: flex;
-  position: absolute;
-  content: '';
-
+.customer-reviews__text::before{
+display: flex;
+position: absolute;
+  top: 28px;
+  left: 61px;
+  width: 54px;
+  height: 40px;
+  content: url( "../images/sprite.svg#quotes");
+  fill: var(--border-color);
+  fill: black;
+transform: rotate(-180deg);
+z-index: 2;
+background-color: rgba(245, 245, 245, .7);
 }
 
 .customer-reviews__heading {
