--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -17,6 +17,12 @@
     top: 31px;
     left: 304px;
   }
+  @media screen and (min-width:$desktop){
+    width: 538px;
+    height: 538px;
+    top: 52px;
+    left: 474px;
+  }
 }
 
 .hero {
@@ -32,7 +38,7 @@
   }
 
   @media screen and(min-width:$desktop) {
-    width: 100%;
+    width: 100vw;
     height: 665px;
   }
 
@@ -71,6 +77,7 @@
     @media screen and(min-width:$desktop){
     display: block;
     position: absolute;
+    top: 433px;
     right: 110px;
     }
   }
@@ -220,9 +227,9 @@
     @media screen and (min-width:$desktop) {
       position: absolute;
       display: block;
-      width: 18px;
-      height: 18px;
-      top: 347px;
+      width: 26px;
+      height: 26px;
+      top: 583px;
       left: 294px;
       border-radius: 50%;
       margin-left: auto;
@@ -265,7 +272,13 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
     
-    color: #D41443; 
+    color: $accent-red-color;
+    @media screen and(min-width:$desktop)
+    {
+      font-size: 46px;
+      line-height: 53px;
+
+    } 
   }
 
   &__text{
@@ -290,19 +303,40 @@
   }
 
   &__small-elipse--cafes{
+    display: none;
+    @media screen and(min-width:$tablet){
+      display: inline-block;
     top: 94px;
     right: 34px;
     z-index: 0;
+    }
+    @media screen and (min-width:$desktop){
+      top: 157px;
+      right: 94px;
+      z-index: 0;
+    }
   }
 
   &__small-elipse--trucks{
-    z-index: 0;
+    display: none;
+    @media screen and(min-width:$tablet){
+      display: inline-block;
+      z-index: 0;
     top: 151px;
     right: 34px;
+    }
+    @media screen and(min-width:$desktop){
+  
+      z-index: 0;
+    top: 250px;
+    right: 93px;
+    }
   }
 
   &__cafes{
+    display: none;
     @media screen and (min-width:$tablet) {
+      display: inline-block;
       position: absolute;
       z-index: 1;
       top: 96px;
@@ -310,17 +344,16 @@
     }
 
     @media screen and(min-width:$desktop){
-      display:block;
-      width: 72px;
-      height: 77px;
-       
+      display:inline-block;
       top: 156px;
       right: 98px;
       }
     }
 
   &__trucks{
+    display: none;
     @media screen and (min-width:$tablet){
+      display: inline-block;
       z-index: 1;
       position: absolute;
       top: 151px;
@@ -328,9 +361,7 @@
     }
       
      @media screen and(min-width:$desktop){
-      display:block;
-      width: 92px;
-      height: 76px;
+      display:inline-block;
       top: 248px;
       right: 98px;
       }
