--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -52,6 +52,7 @@ img {
 
   @media screen and(min-width:$desktop) {
     width: $desktop;
+    max-width: 100vw;
     padding-left: 46px;
     padding-right: 115px;
   }
