made advantages list

--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -1,15 +1,14 @@
 .advantages-section {
-
   background-color: var(--primary-bcg-color);
   padding-top: 39px;
-  padding-bottom: 124px;
+  padding-bottom: 97px;
   @media screen and (min-width: 772px) {
-    padding-bottom: 246px;
+    padding-bottom: 140px;
     padding-top: 66px;
   }
   @media screen and (min-width: 1280px) {
     padding-top: 39px;
-    padding-bottom: 310px;
+    padding-bottom: 139px;
   }
 }
 
@@ -23,9 +22,28 @@
 .advantages-list-item {
   display: block;
   margin-top: 38px;
+  width: 100%;
   &:first-child {
     margin-top: 0;
   }
+  @media screen and (min-width: 772px) {
+    margin-top: 0;
+    margin-right: 60px;
+    width: calc((100% - 120px) / 3);
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+  @media screen and (min-width: 1280px) {
+    margin-right: 30px;
+    width: calc((100% - 60px) / 3);
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
+
+.advantages-list-item {
   &::before {
     content: "";
     display: block;
@@ -33,7 +51,6 @@
     margin-bottom: 16px;
     background-color: var(--primary-bcg-color);
     background-repeat: no-repeat;
-    background-image: url('../images/advantages/advantage1.png');
     @media screen and (min-width: 772px) {
       margin-bottom: 36px;
     }
@@ -41,17 +58,17 @@
       margin-bottom: 40px;
     }
   }
-}
-
-.advantages-list-item {
-  @media screen and (min-width: 772px) {
-    margin-top: 0;
-    width: calc((100% - 120px) / 3);
-    &:last-child {
-      margin-right: 0;
-    }
+  &.one::before {
+    background-image: url('../images/advantages/advantage1.png');
+  }
+  &.two::before {
+    background-image: url('../images/advantages/advantage2.png');
+  }
+  &.three::before {
+    background-image: url('../images/advantages/advantage3.png');
   }
 }
+
 
 .advantages-item-title {
   font-family: Titan One;
