--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,7 +1,8 @@
 <section class="container">
+  <a name="Contact"></a>
   <!-- <h2>Contacts</h2> -->
   <div class="contacts">
-    <ul class="contacts-cards list"">
+    <ul class="contacts-cards list">
       <li class="contacts-list">
         <p class="contacts-tittle">Cafe</p>
         <p class="contacts-town">Chicago</p>
