--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,8 +2,8 @@
     <div class="container">
         <h1 class="title">ice cream made with <span class="title-red">passion</span></h1>
         <ul class="nav">
-            <li><a class="button-product" href="#">Products</a></li>
-            <li><a class="button-him" href="#">How it’s made?</a></li>
+            <li><a class="button-product" href="#Products">Products</a></li>
+            <li><a class="button-him" href="#Him">How it’s made?</a></li>
         </ul>
         <ul class="list">
             <li class="item">
