--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -12,6 +12,7 @@
         <!--products-->
         <section class="section-products">
             <div class="container">
+                <a name="Products"></a>
                 <p class="products-text"> 100% natural</p>
                 <h2 class="products-title"> products </h2>
 
