--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -93,9 +93,9 @@
             @include font-tablet($fs:22px, $lh:25px, $fw:400);
             width: 162px;
             margin-bottom: 20px;
-            .title-red{
-                @include font-mobile($fs:34px, $lh:31px, $fw:400);
-            }
+        }
+        .title-red{
+            @include font-mobile($fs:34px, $lh:31px, $fw:400);
         }
         .nav{
             margin-bottom: 19px;
@@ -196,6 +196,117 @@
     } 
 
     @media screen and (min-width: 1200px) {
+        .container{
+            height: 515px;
+            padding-top: 15px;
+            padding-bottom: 62px;
+        }
+        .title{
+            width: 277px;
+            @include font-mobile($fs:38px, $lh:44px, $fw:400);
+        }
+        .title-red{
+            @include font-mobile($fs:58px, $lh:52px, $fw:400);
+        }
+        .nav{
+            &:after{
+                content: "";
+                position: absolute;
+                bottom: 81px;
+                left: 360px;
+                width: 538px;
+                height: 538px;
+                border-radius: 50%;
+                background-color: var(--pink);
+            }
+            a{
+                @include font-mobile($fs:14px, $lh:18px, $fw:400);
+                padding: 11px 24px;
+                margin-bottom: 56px;
+              
+            }
+        }
+        .icecream{
+            width: 236px;
+            height: 557px;
+            bottom: 0;
+            left: 479px;
+        }
+        .ice-girl{
+            width: 293px;
+
+        }
+        .milk{
+            width: 188px;
+        }
+        .info-bio{
+            position: absolute;
+            bottom: 69px;
+            left: 180px;
+        }
+        .text{
+            display: block;
+            width: 200px;
+            margin-bottom: 20px;
+            @include font-mobile($fs:14px, $lh:20px, $fw:400);
+            color: var(--white);
+        }
+        .button-bio{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 26px;
+            height: 26px;
+            border-radius: 50%;
+            background-color: var(--white);
+            border: none;
+            cursor: pointer;
+        }
+        .list{
+            position: absolute;
+            top: 0;
+            right: 0px;
+
+            .item{
+                position: relative;
+            }
+
+            .item:not(:last-child){
+                margin-bottom: 35px;
+            }
+            .item::after{
+                content: "";
+                position: absolute;
+                z-index: 0;
+                top: -4px;
+                left: 45px;
+                width: 30px;
+                height: 30px;
+                border-radius: 50%;
+                background-color: var(--white);
+            }
+
+            .nomber-of{
+                display: block;
+                position: relative;
+                text-align: end;
+                z-index: 1;
+                font-family: 'Titan One', sans-serif;
+                @include font-mobile($fs:46px, $lh:53px, $fw:400);
+                color: var(--dark-pink);
+            }
+
+            .quantity-of{
+                display: block;
+                position: absolute;
+                white-space: nowrap;
+                top: 55px;
+                right: 2px;
+                @include font-mobile($fs:14px, $lh:18px, $fw:400);
+                color: var(--white);
+
+            }
+        }
         
     }
 }
