--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,38 +1,3 @@
-
-<header class="container">
-    <div class="mobile-menu">
-        <div class="mobile-menu-button-wrapper">
-            <button class="mobile-menu-btn" type="button">
-                Buy now
-                <svg class="mobile-menu-btn-icon">
-                    <use href="./images/sprite.svg#icon-menu-button"></use>
-                </svg>
-            </button>
-        </div>
-        <ul class="menu-list list">
-            <li class="menu-list-item">
-                <a class="menu-list-link" href="#">Home</a>
-            </li>
-            <li class="menu-list-item">
-                <a class="menu-list-link" href="#">About us</a>
-            </li>
-            <li class="menu-list-item">
-                <a class="menu-list-link" href="#">How it's made?</a>
-            </li>
-            <li class="menu-list-item">
-                <a class="menu-list-link" href="#">Our products</a>
-            </li>
-            <li class="menu-list-item">
-                <a class="menu-list-link" href="#">Contacts</a>
-            </li>
-        </ul>
-        <button class="menu-close-btn" type="button">
-            <svg class="menu-close-icon">
-                <use href="./images/sprite.svg#icon-menu-close"></use>
-            </svg>
-        </button>
-</div>
-
 <header>
     <div class="container">
         <nav>
@@ -48,14 +13,14 @@
                 </picture>
             </a>
             <ul class="list">
-                <li class="item"><a class="link" href="#">Home</a></li>
-                <li class="item"><a class="link" href="#">About us</a></li>
-                <li class="item"><a class="link" href="#">How it’s made?</a></li>
-                <li class="item"><a class="link" href="#">Our products</a></li>
-                <li class="item"><a class="link" href="#">Contact</a></li>
+                <li class="item"><a class="link" href="#Home">Home</a></li>
+                <li class="item"><a class="link" href="#About">About us</a></li>
+                <li class="item"><a class="link" href="#Him">How it’s made?</a></li>
+                <li class="item"><a class="link" href="#Products">Our products</a></li>
+                <li class="item"><a class="link" href="#Contact">Contact</a></li>
             </ul>
         </nav>
-        <button class="burger">
+        <button class="burger" data-menu-button>
             <svg width="20px" height="12px">
                 <use href="./images/sprite.svg#icon-Burger"></use>
             </svg>
@@ -65,6 +30,37 @@
                 <use href="./images/sprite.svg#icon-bracket"></use>
             </svg> 
         </button>
-
+    </div>
+    <div class="mobile-menu" data-menu>
+        <div class="mobile-menu-button-wrapper">
+            <button class="mobile-menu-btn" type="button">
+                Buy now
+                <svg class="mobile-menu-btn-icon">
+                    <use href="./images/sprite.svg#icon-menu-button"></use>
+                </svg>
+            </button>
+        </div>
+        <ul class="menu-list list">
+            <li class="menu-list-item">
+                <a class="menu-list-link" href="#Home">Home</a>
+            </li>
+            <li class="menu-list-item">
+                <a class="menu-list-link" href="#About">About us</a>
+            </li>
+            <li class="menu-list-item">
+                <a class="menu-list-link" href="#Him">How it's made?</a>
+            </li>
+            <li class="menu-list-item">
+                <a class="menu-list-link" href="#Products">Our products</a>
+            </li>
+            <li class="menu-list-item">
+                <a class="menu-list-link" href="#Contact">Contacts</a>
+            </li>
+        </ul>
+        <button class="menu-close-btn" type="button" data-menu-close>
+            <svg class="menu-close-icon">
+                <use href="./images/sprite.svg#icon-menu-close"></use>
+            </svg>
+        </button>
     </div>
 </header>
