--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,106 +1,9 @@
-
-.mobile-menu {
-    width: 100%;
-    max-width: 250px;
-    height: 100%;
-    max-height: 502px;
-    background-color: var(--mobile-menu-bg-color);
-    box-shadow: -8px 0px 20px rgba(0, 0, 0, 0.25);
-    padding-top: 60px;
-
-    position: absolute;
-    top: 0;
-    left: 50%;
-
-    transform: translateX(-44%);
-
-
-    &-btn {
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.313;
-        color: var(--dark-pink);
-
-        width: 209px;
-        height: 44px;
-        border-radius: 22px;
-        border: none;
-        background-color: var(--white);
-
-        padding-left: 48px;
-        padding-right: 70px;
-        
-        position: relative;
-
-        &:focus {
-            background-color: var(--accent);
-        }
-
-        &-icon {
-            width: 20%;
-            height: 20%;
-            position: absolute;
-            top: 19px;
-            right: 32px;
-        }
-    }
-}
-
-.mobile-menu-button-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 19px;
-}
-
-.menu-list-link {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.286;
-    color: var(--white);
-
-    padding-top: 12px;
-    padding-bottom: 12px;
-    display: inline-block;
-
-    &:focus {
-        color: var(--dark-pink);
-    }
-}
-
-
-.menu-list-item {
-    padding-left: 21px;
-    border-top: 1px solid var(--mobile-menu-pseudo-color);
-}
-
-.menu-list-item:last-child {
-    border-bottom: 1px solid var(--mobile-menu-pseudo-color);
-}
-
-.menu-close-btn {
-    background-color: transparent;
-    border: none;
-    padding: 0;
-}
-
-.menu-close-icon {
-    width: 30px;
-    height: 30px;
-    fill: var(--white);
-
-    position: absolute;
-    top: 15px;
-    right: 18px;
-}
-
-//=======
-
 header{
     background-color: var(--hero-pink);
     font-family: 'DM Sans', sans-serif;
     @include font-mobile($fs:14px, $lh:18px);
     color: var(--white);
+    position: relative;
     .container{
         display: flex;
     }
@@ -154,7 +57,7 @@ header{
         }
         .burger{
             position: relative;
-            z-index: 1;
+            z-index: 2;
             margin-left: auto;
             margin-right: 30px;
 
@@ -211,6 +114,7 @@ header{
             align-items: center;
             margin-left: auto;
             margin-right: 110px;
+            z-index: 2;
         }
 
         .link{
@@ -235,6 +139,112 @@ header{
         }
 
     }
+    
+    .mobile-menu {
+        width: 100%;
+        max-width: 250px;
+        height: 100vh;
+        background-color: var(--mobile-menu-bg-color);
+        box-shadow: -8px 0px 20px rgba(0, 0, 0, 0.25);
+        padding-top: 60px;
+        z-index: 3;
+    
+        position: absolute;
+        top: 0;
+        left: 50%;
+    
+        transform: translateX(-50%) translateY(-101%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);    
+        opacity: 0;
+        pointer-events: none;
+      
+        &.is-open{
+            opacity: 1;
+            transform: translateX(-50%) translateY(0%);
+            pointer-events: auto;
+        }
+        &-btn {
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 1.313;
+            color: var(--dark-pink);
+    
+            width: 209px;
+            height: 44px;
+            border-radius: 22px;
+            border: none;
+            background-color: var(--white);
+    
+            padding-left: 48px;
+            padding-right: 70px;
+            
+            position: relative;
+    
+            &-icon {
+                width: 20%;
+                height: 20%;
+                position: absolute;
+                top: 19px;
+                right: 32px;
+            }
+        }
+    }
+    
+    .mobile-menu-button-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 19px;
+    }
+    .menu-list{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .menu-list-link {
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.286;
+        color: var(--white);
+    
+        padding-top: 12px;
+        padding-bottom: 12px;
+        display: inline-block;
+
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:focus{
+            color: var(--dark-pink);
+        }
+    }
+    
+    .menu-list-item {
+        padding-left: 21px;
+        border-top: 1px solid var(--mobile-menu-pseudo-color);
+    }
+    
+    .menu-close-btn {
+        background-color: transparent;
+        border: none;
+        padding: 0;
+
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:focus{
+           fill: var(--dark-pink);
+        }
+    }
+    
+    .menu-close-icon {
+        width: 30px;
+        height: 30px;
+        fill: var(--white);
+    
+        position: absolute;
+        top: 15px;
+        right: 18px;
+    }
+    
 
 
     
