--- a/src/partials/modal-about.html
+++ b/src/partials/modal-about.html
@@ -6,15 +6,12 @@
                 <use href="./images/sprite.svg#icon-close"></use>
             </svg>
         </button>
+    <p class="about-modal__title section-subtitle">Ice Cream Cone</p>    
     <p class="about-modal__text">
             The ice cream cone would seem to be a simple and unpolitical a treat, yet it's origin is hotly contested. The most
         favored folk tale regarding the invention of the ice cream cone takes place at the 1904 World's Fair held in St. Louis,
         Missouri. Two food vendors had stalls next to each other. Arnold Fornachou made and sold ice cream. His neighbor, Ernest
-        A. Hamwi, had come to the United States from Damascus, Syria. Hamwi made sweet wafers (much like today's wafer-like
-        cookies) that Syrians call "zalabias." Hamwi cooked the wafers on a waffle iron heated over a coal fire, coated them
-        with sugar, and rolled the wafers while they were still hot so they were easy to eat and carry. When Fornachou ran out
-        of dishes to hold his ice cream, Hamwi rolled his wafers into a cone shape instead of a tube, and the gentlemen topped
-        the wafer with scoops of Fornachou's ice cream. 
+        A. Hamwi, had come to the United States from Damascus, Syria. 
     </p>
     </div>
 </div>
