--- a/src/sass/components/_about-modal.scss
+++ b/src/sass/components/_about-modal.scss
@@ -13,6 +13,10 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
   @media screen and(min-width:480px) {
     width: 440px;
@@ -27,7 +31,21 @@
   }
 }
 
+.about-modal__title.section-subtitle {
+  color: var(--color-design-main);
+
+  font-size: 26px;
+
+  @media screen and(min-width:480px) {
+    font-size: 30px;
+  }
+
+  @media screen and(min-width:768px) {
+    font-size: 36px;
+  }
+}
 .about-modal__text {
+  text-align: center;
   font-weight: 500;
   font-size: 18px;
   line-height: 1.58;
@@ -55,6 +73,9 @@
 }
 
 .about-modal__icon-close {
+  position: absolute;
+  top: 5%;
+  right: 5%;
   fill: var(--bg-btn-dark);
   transition: fill 250ms linear;
 
